<resources>
    <string name="app_name">Calendar</string>
    <string name="add">add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="_00_00">00:00</string>
    <string name="date">Date</string>
    <string name="_01_03_2000">12.02.1999</string>
    <string name="today">today</string>
    <string name="todo">TODO</string>
    <string name="textview">textView</string>
    <string name="_1">1</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>
</resources>
