<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarAddEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borderbottomwhite"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAddEvent">

        <EditText
            android:id="@+id/fieldTitle"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="40"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <LinearLayout
            android:id="@+id/linearLayoutTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="12sp"
                android:paddingEnd="0sp"
                android:text="@string/time"
                android:textColor="@color/colorBlack"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingStart="0sp"
                android:paddingEnd="12sp"
                android:text="@string/_00_00"
                android:textAlignment="textEnd"
                android:textColor="@color/colorBlack"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="12sp"
                android:paddingEnd="0sp"
                android:text="@string/date"
                android:textColor="@color/colorBlack"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:paddingStart="0sp"
                android:paddingEnd="12sp"
                android:text="@string/_01_03_2000"
                android:textAlignment="textEnd"
                android:textColor="@color/colorBlack"
                android:textSize="30sp" />
        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>